--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -103,7 +103,8 @@
         <section id="secao-pergunta-2">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 2:</h1>
-                <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo nórdico?</p>
+                <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
+                    nórdico?</p>
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
@@ -151,21 +152,26 @@
         <section id="secao-pergunta-4">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 4</h1>
-                <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas características distintas?</p>
+                <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
+                    características distintas?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao4" id="" value="errado"> A - Odin (sabedoria), Thor (força), Freyja (amor)
+                    <input type="radio" name="questao4" id="" value="errado"> A - Odin (sabedoria), Thor (força), Freyja
+                    (amor)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr (fertilidade)
+                    <input type="radio" name="questao4" id="" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr
+                    (fertilidade)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall (vigilância)
+                    <input type="radio" name="questao4" id="" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall
+                    (vigilância)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="certo"> D - Odin (sabedoria), Freyja (amor), Thor (trovão)
+                    <input type="radio" name="questao4" id="" value="certo"> D - Odin (sabedoria), Freyja (amor), Thor
+                    (trovão)
                 </label>
 
                 <div class="buttonResponder">
@@ -182,20 +188,99 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao5" id="" value="errado"> A - Uma espada mágica; representa o poder dos deuses.
+                    <input type="radio" name="questao5" id="" value="errado"> A - Uma espada mágica; representa o poder
+                    dos deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="certo"> B -  Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo
+                    <input type="radio" name="questao5" id="" value="certo"> B - Uma árvore cósmica que conecta os Nove
+                    Mundos; simboliza a ordem do universo
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado"> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente
+                    <input type="radio" name="questao5" id="" value="errado"> C - Uma serpente gigante que envolve o
+                    mundo; representa a destruição iminente
                 </label>
                 <label>
                     <input type="radio" name="questao5" id="" value="errado"> D - Um pássaro mágico
                 </label>
-
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
+                </div>
+            </div>
+        </section>
+        <section id="secao-pergunta-6">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 6:</h1>
+                <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
+                <p class="dificuldade">Nível médio</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao6" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado para criar trovões e relâmpagos.
+                </label>
+                <label>
+                    <input type="radio" name="questao6" id="" value="errado"> B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.
+                </label>
+                <label>
+                    <input type="radio" name="questao6" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.
+                </label>
+                <label>
+                    <input type="radio" name="questao6" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia nórdica.
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta6">
+                </div>
+            </div>
+        </section>
+        <section id="secao-pergunta-7">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 7:</h1>
+                <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia nórdica?</p>
+                <p class="dificuldade">Nível difícil</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao7" id="" value="errado"> A - Uma grande festa dos deuses antes do fim do mundo.
+                </label>
+                <label>
+                    <input type="radio" name="questao7" id="" value="errado"> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.
+                </label>
+                <label>
+                    <input type="radio" name="questao7" id="" value="certo"> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do mundo.
+                </label>
+                <label>
+                    <input type="radio" name="questao7" id="" value="errado"> D - D A ascensão de um novo deus supremo para governar os Nove Mundos.
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta7">
+                </div>
+            </div>
+        </section>
+
+        <section id="secao-pergunta-8">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 8:</h1>
+                <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos.</p>
+                <p class="dificuldade">Nível difícil</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao8" id="" value="errado"> A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses.
+                </label>
+                <label>
+                    <input type="radio" name="questao8" id="" value="errado"> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza.
+                </label>
+                <label>
+                    <input type="radio" name="questao8" id="" value="certo"> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram abalados.
+                </label>
+                <label>
+                    <input type="radio" name="questao8" id="" value="errado"> D - Baldur era um deus amado cuja morte levou a uma série de eventos que levaram ao Ragnarök.
+                    
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta8">
                 </div>
             </div>
         </section>
